modules/scaler-database/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mysql-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: “true”
spec:
  rules:
  - host: <scaler-db-hostname>
    http:
      paths:
      - path: /
        backend:
          serviceName: scaler-db-mysql
          servicePort: 3306
  tls:
  - secretName: c-bdlpk #nginx-issuer
    hosts:
        - <scaler-db-hostname>
